<resources>
    <string name="app_name">BoolApp</string>
    <string name="false_button_text">FALSE</string>
    <string name="true_button_text">TRUE</string>
    <string name="prev_button_text">PREV</string>
    <string name="next_button_text">NEXT</string>
    <string name="placeHolder">Question goes here</string>
    <string name="image_description">Android icon image</string>
    <string name="correct">That\'s correct</string>
    <string name="wrong">That\'s wrong</string>
    <string name="first_question">A baby has more bones than an adult</string>
    <string name="second_question">A shark can blink its eyes</string>
    <string name="third_question">The U.S dollars are made from fibre</string>
    <string name="fourth_question">Sandwich is named after a person</string>
    <string name="fifth_question">A tiger has stripes on its skin</string>
    <string name="sixth_question">Like we have Whitehouse for our President, there is Greenhouse \n for the President in Argentina</string>
    <string name="seventh_question">An ostrich has the largest eye in the world</string>
    <string name="eighth_question">Some 16 billion emails are sent today</string>
    <string name="ninth_question">Gorilla\'s blood type is all \"B\"</string>
    <string name="tenth_question">Snoopy is yellow in Brazil</string>
</resources>